--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
 
 .tile img {
     width: 100%;
-    height: auto;
+    height: 100vh;
     border-radius: 8px; /* Optional: rounded corners for images */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: slight shadow effect */
 }
